[SQUASH] Settings: Statusbar network traffic [2/2]
Change-Id: Ibea4f8e8332ebfd5de758f137df8a10996f61521

---

Settings: Hide arrows in network traffic indicators [2/2]

Change-Id: I3fb279fb5782e34be33356163d0ff5c1619c308b

---

Settings: Notch friendly network traffic [2/2]

Change-Id: I98e1cb05e6f4c7eb81b2449d3942bb7cae6bda59

---

Settings: Cleanup Network traffic

Change-Id: I9e3613b78a07089763215ab8e402e91fd0357fee

---

Settings: Network Traffic: Customize refresh interval [2/2]

Change-Id: Ifd720c6f6d5c758381e26613f67384b357a94fa4

---

Settings: Network Traffic: Allow to choose display mode [1/2]

Change-Id: I7972c102b0e41d181426bf1635ed7ba9ee8e52ba
Signed-off-by: PainKiller3 <ninadpatil100@gmail.com>
Co-authored-by: Nico60 <ndhouailly@gmail.com>
Co-authored-by: Anushek Prasal <anushekprasal@gmail.com>
Co-authored-by: neobuddy89 <neobuddy89@gmail.com>

--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -184,4 +184,16 @@
             android:defaultValue="false" />
 
     </PreferenceCategory>
+
+    <PreferenceCategory
+        android:key="misc_category"
+        android:title="@string/misc_title">
+
+        <com.p404.support.preferences.SystemSettingMasterSwitchPreference
+            android:key="network_traffic_state"
+            android:title="@string/network_traffic_state_title"
+            android:summary="@string/network_traffic_state_summary"
+            android:fragment="com.p404.fragments.NetworkTraffic"
+            android:defaultValue="false" />
+    </PreferenceCategory>
 </PreferenceScreen>
