Settings: Allow toggling combined signal icons [2/2]
* @jhonboy121: remove preference controller usaeg and use the default value for switch from sysui resource
idoybh (YAAP): Good ol' java

Change-Id: I13a61f6f379a7ff963194c229563d242c61302ba

--- a/res/values/404_strings.xml
+++ b/res/values/404_strings.xml
@@ -221,4 +221,8 @@
     <!-- Hidden apps -->
     <string name="hidden_apps_title">Hidden apps</string>
     <string name="hidden_apps_summary">Applications that should be hidden from launcher</string>
+
+        <!-- Combined signal icons in status bar -->
+    <string name="combined_status_bar_signal_icons">Combined signal icons</string>
+    <string name="combined_status_bar_signal_icons_summary">Enable combined signal icons in status bar.\nRequires a SystemUI restart</string>
 </resources>
