Settings: Added a fragment for hosting a selectable list of applications
Signed-off-by: jhonboy121 <alfredmathew05@gmail.com>
Change-Id: Ifeb9cf9705fd9fee0ecb7455d0d8b7825280cdf1
Signed-off-by: PainKiller3 <ninadpatil100@gmail.com>

---

Settings: Improve apps list fragment

* Use coroutines to asynchronously update list instead of blocking main thread.
* Also fixed checked items being cleared out / showing wrong checked items when searching

Signed-off-by: jhonboy121 <alfredmathew05@gmail.com>
Change-Id: I4c4e3c444bc0676ba5f8caaf75767b41be2aa60e

---

Settings: Show a loading progress for apps list

Signed-off-by: jhonboy121 <alfredmathew05@gmail.com>
Change-Id: Id475643f5d51d42be37edb799ce0387a80bced70

--- a/res/values/404_strings.xml
+++ b/res/values/404_strings.xml
@@ -196,4 +196,8 @@
     <string name="app_volume">App volume</string>
     <string name="app_volume_title">Per-app volume control</string>
     <string name="app_volume_summary">Allow to set different volume levels for each app</string>
+
+    <!-- applist fragment -->
+    <string name="search">Search</string>
+    <string name="search_apps">Search apps</string>
 </resources>
