Settings: Add support for per-app volume [3/3]
Change-Id: I5ae32c7aa40dda311f54c4a35c26a2c37a71530c
Signed-off-by: chrisw444 <wandersonrodriguesf1@gmail.com>

--- a/res/values/404_strings.xml
+++ b/res/values/404_strings.xml
@@ -191,4 +191,9 @@
     <!-- 4G icon -->
     <string name="show_fourg_icon_title">4G icon</string>
     <string name="show_fourg_icon_summary">Show 4G icon instead of LTE</string>
+
+    <!-- Per-app volume control -->
+    <string name="app_volume">App volume</string>
+    <string name="app_volume_title">Per-app volume control</string>
+    <string name="app_volume_summary">Allow to set different volume levels for each app</string>
 </resources>
