--- a/res/xml/sound_settings.xml
+++ b/res/xml/sound_settings.xml
@@ -225,6 +225,13 @@
           android:title="@string/call_connected_tones_title" />
 
 
+    <com.p404.support.preferences.SystemSettingSwitchPreference
+        android:key="show_app_volume"
+        android:title="@string/app_volume_title"
+        android:summary="@string/app_volume_summary"
+        android:defaultValue="false"
+        android:order="-5"/>
+
     <PreferenceCategory
         android:key="incall_vib_options"
         android:title="@string/incall_vibration_category" >
