Settings: Live Volume Steps [2/2]
Change-Id: I86eed372cb6f29ac8bcb774dbef3b87a6f65a64a

--- a/res/xml/sound_settings.xml
+++ b/res/xml/sound_settings.xml
@@ -252,6 +252,13 @@
             android:defaultValue="false" />
     </PreferenceCategory>
 
+    <!-- Live Volume Steps -->
+    <Preference
+        android:key="vol_steps"
+        android:title="@string/volume_steps_fragment_title"
+        android:summary="@string/volume_steps_summary"
+        android:fragment="com.android.settings.sound.VolumeStepsFragment" />
+
     <Preference
         android:key="sound_work_settings"
         android:title="@string/sound_work_settings"
