Settings: allow hiding apps from launcher [2/2]
Signed-off-by: jhonboy121 <alfredmathew05@gmail.com>
Change-Id: I9fedc1503c5ad357960b4b07936a1ec66d82343e
Signed-off-by: PainKiller3 <ninadpatil100@gmail.com>

---

Settings: Allow hiding system apps that appear in launcher

Signed-off-by: jhonboy121 <alfredmathew05@gmail.com>
Change-Id: Iacccc27507d0f9c2eac9e45966fa3f7c3f595905

--- a/res/values/404_strings.xml
+++ b/res/values/404_strings.xml
@@ -217,4 +217,8 @@
     <string name="network_traffic_upload">Upload</string>
     <string name="network_traffic_autohide_threshold_title">Auto-hide threshold</string>
     <string name="network_traffic_refresh_interval_title">Refresh interval</string>
+
+    <!-- Hidden apps -->
+    <string name="hidden_apps_title">Hidden apps</string>
+    <string name="hidden_apps_summary">Applications that should be hidden from launcher</string>
 </resources>
