--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -195,6 +195,13 @@
         android:key="misc_category"
         android:title="@string/misc_title">
 
+        <com.p404.support.preferences.SystemSettingMasterSwitchPreference
+            android:key="network_traffic_state"
+            android:title="@string/network_traffic_state_title"
+            android:summary="@string/network_traffic_state_summary"
+            android:fragment="com.p404.fragments.NetworkTraffic"
+            android:defaultValue="false" />
+        
         <Preference
             android:key="hidden_apps"
             android:title="@string/hidden_apps_title"
