--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -189,6 +189,11 @@
             android:summary="@string/combined_status_bar_signal_icons_summary"
             android:defaultValue="false" />
 
+        <com.p404.support.preferences.SystemSettingSwitchPreference
+            android:key="qs_footer_data_usage"
+            android:title="@string/qs_footer_datausage_title"
+            android:summary="@string/qs_footer_datausage_summary"
+            android:defaultValue="false" />
     </PreferenceCategory>
 
     <PreferenceCategory
